# DNS-Relay

./: .gitignore  CMakeLists.txt  HashCacheTable.c  HashCacheTable.cpp  HashCacheTable.h  HashCache说明.md  HashLinkedList.c  HashLinkedList.cpp  HashLinkedList.h  HashTable.c  HashTable.cpp  HashTable.h  LinkedList.c  LinkedList.cpp  LinkedList.h  LinkedListNode.h  LinkedListTest.c  LinkedList说明.md  README.md  Test.c  TestCache.c  dnsSerach.c  dnsserach.sln  main.cpp  serachTable.c  serachTable.cpp  serachTable.h  程序使用.md
dnsserach/: dnsserach.vcxproj  dnsserach.vcxproj.filters
